# R-Type-Epitech-Tech-3

./: CMakeLists.txt  Doc_Rtype_2020.docx  Doxyfile  Makefile  README.md  conanfile.txt  launch.sh  rfc2223.txt
Client/include/: Client.hpp  GameClient.hpp
Client/src/: Client.cpp  GameClient.cpp  main.cpp
GameEngine/: Game.cpp  Game.hpp  main.cpp  makefile
GameEngine/include/: Data.hpp
GameEngine/include/Component/: Collision.hpp  Sound.hpp  Sprite.hpp  Text.hpp  Transform.hpp  Velocity.hpp
GameEngine/include/Core/: ComponentArray.hpp  ComponentManager.hpp  Coordinator.cpp  Coordinator.hpp  EntityManager.cpp  EntityManager.hpp  System.hpp  SystemManager.hpp
GameEngine/include/Entity/: EntityArray.hpp  EntityCreator.cpp  EntityCreator.hpp
GameEngine/include/System/: BulletHandler.hpp  Collide.hpp  GetAllPos.hpp  GetPlayerInput.hpp  Movement.hpp  PlayerInput.hpp  RenderParallax.hpp  RenderSprite.hpp  SendAllData.hpp  SendCreation.hpp  SendEntityCreation.hpp  Shoot.hpp
GameEngine/src/: Client.cpp
GameEngine/src/Entity/: BackgroundBigPlanet.cpp  BackgroundFarPlanet.cpp  BackgroundPlanetRing.cpp  BackgroundSpace.cpp  BackgroundStars.cpp  Bullet.cpp  Enemy.cpp  EnemyBullet.cpp  EntityArray.cpp  Makefile  Player.cpp  PlayerBis.cpp
GameEngine/src/System/: BulletHandler.cpp  Collide.cpp  GetAllPos.cpp  GetPlayerInput.cpp  Movement.cpp  PlayerInput.cpp  RenderParallax.cpp  RenderSprite.cpp  SendAllData.cpp  SendCreation.cpp  SendEntityCreation.cpp  Shoot.cpp
Network/include/: AUDPSocket.hpp  Endpoint.hpp  IOContext.hpp  IUDPSocket.hpp  RemoteEndpoint.hpp  StreamBuffer.hpp  UDPReceive.hpp  UDPReceiveSocket.hpp  UDPSend.hpp  UDPSendSocket.hpp
Network/include/data/: Data.hpp
Network/src/: Endpoint.cpp  IOContext.cpp  RemoteEndpoint.cpp  StreamBuffer.cpp  UDPReceive.cpp  UDPReceiveSocket.cpp  UDPSend.cpp  UDPSendSocket.cpp
Server/include/: GameServer.hpp  Server.hpp
Server/src/: GameServer.cpp  Server.cpp  main.cpp
docs/html/: AUDPSocket_8hpp.html  AUDPSocket_8hpp_source.html  BackgroundBigPlanet_8cpp.html  BackgroundBigPlanet_8cpp_source.html  BackgroundFarPlanet_8cpp.html  BackgroundFarPlanet_8cpp_source.html  BackgroundPlanetRing_8cpp.html  BackgroundPlanetRing_8cpp_source.html  BackgroundSpace_8cpp.html  BackgroundSpace_8cpp_source.html  BackgroundStars_8cpp.html  BackgroundStars_8cpp_source.html  BulletHandler_8cpp.html  BulletHandler_8cpp_source.html  BulletHandler_8hpp.html  BulletHandler_8hpp_source.html  Bullet_8cpp.html  Bullet_8cpp_source.html  Client_2src_2Client_8cpp.html  Client_2src_2Client_8cpp_source.html  Client_2src_2main_8cpp.html  Client_2src_2main_8cpp_source.html  Client_8hpp.html  Client_8hpp_source.html  Collide_8cpp.html  Collide_8cpp_source.html  Collide_8hpp.html  Collide_8hpp_source.html  Collision_8hpp.html  Collision_8hpp_source.html  ComponentArray_8hpp.html  ComponentArray_8hpp_source.html  ComponentManager_8hpp.html  ComponentManager_8hpp_source.html  Coordinator_8cpp.html  Coordinator_8cpp_source.html  Coordinator_8hpp.html  Coordinator_8hpp_source.html  Endpoint_8cpp.html  Endpoint_8cpp_source.html  (+258 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  (+53 more)
